--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,5 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/name"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        style="@style/NameStyle" />
 </LinearLayout>
