--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,25 @@
     <ImageView
         android:id="@+id/star_image"
         android:layout_width="wrap_content"
-        android:layout_gravity="center"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/layout_margin"
+        android:contentDescription="@string/yellow_star"
         app:srcCompat="@android:drawable/btn_star_big_on" />
+
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/layout_margin">
+
+        <TextView
+            android:id="@+id/text_bio"
+            style="@style/style_bio"
+            android:layout_margin="@dimen/layout_margin"
+            android:fontFamily="@font/roboto"
+            android:text="@string/bio_text"
+            app:lineHeight="30dp" />
+    </ScrollView>
+
 </LinearLayout>
